--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *{
 	outline: 1px solid red;
 }
-div.objetivo-fondo{
+.objetivo-fondo{
 	background-image: url(fondo.jpg) no-repeat;
 	background-size: cover;
 }
